# squirrel-extensions

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml
modules/json/: CMakeLists.txt  main.cpp
modules/json/detail/: json_dumps.hpp  json_loads.hpp  register.hpp  vm.hpp
test/sq/: CMakeLists.txt  main.cpp  plugins.cpp  plugins.h
test/sq_repl/: CMakeLists.txt  main.cpp  plugins.cpp  plugins.h
